# Hexlet-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  makeHexlet.bat
drivers/sdl2/: CMakeLists.txt  driver_sdl2.c  graphics_sdl2.c  logger.c  main.c
drivers/sdl3/: CMakeLists.txt  graphics_sdl3.c  logger.c  logger.h  main.c
include/: hexlet_bools.h  hexlet_driver.h  hexlet_emulate.h  hexlet_errs.h  hexlet_graphics.h  hexlet_ints.h  hexlet_loader.h  hexlet_memory.h  hexlet_version.h
src/: assembler.c  assembler.h  errors.h  graphics.h  loader.c  loader.h  logger.c  logger.h  main.c  memory.h  pilot.c  pilot.h  version.c  version.h
